--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body style="background-color: #000000;">
-    <img src="https://http.cat/404", id="errorimage" style="height: 95%; width: auto;">
+    <img src="https://http.cat/404", id="errorimage" style="height: 90vw; width: auto;">
     <script>
         const codes = [
                 100, //   Continue
